crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__group_cap_with_overflow.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 9
 ──────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0    ⢿ 0   ○ 9

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄▕
▌○ codex · 258k                    ▐
▌  task-0                          ▐
▏○ codex · 258k                    ▕
▏  task-1                          ▕
▏○ codex · 258k                    ▕
▏  task-2                          ▕
▏○ codex · 258k                    ▕
▏  task-3                          ▕
▏○ codex · 258k                    ▕
▏  task-4                          ▕
▏○ codex · 258k                    ▕
▏  task-5                          ▕
▏  +3 more                         ▕
















                         ? for help
