crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__help_overlay_floating_box.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                                            ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 6                                                                      $0.00
 ──────────────────────────────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                                          ⢿ 6   ☾ 0   ○ 0

▎⑂ alpha ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ codex                                                                       ▐
▌  task-0                                                                      ▐
▌  ▢ ────────────────────────────────────────────────────────────────────    0%▐
▌  ▤ 0                                                                         ▐
▎⣾ codex                                                                       🮇
▎  task-1                                                                      🮇
▎  ▢ ────────────────────────────────────────────────────────────────────    0%🮇
▎  ▤ 0                                                                         🮇
▎⣾ codex                                                                       🮇
▎  task-2                                                                      🮇
▎  ▢ ──────────────────────────────────╭ help ─────────────────────────────────╮
▎  ▤ 0                                 │ keys                                  │
                                       │   /   search                          │
 ⑂ beta                                │ ↕ j/k rows          ↕ J/K   worktrees │
 ⣾ codex                               │ ↕ g/G ends          ↕ ^f/^b page      │
   task-3                              │ ↕ H/L screen        ⏎ l     focus     │
   ▢ ──────────────────────────────────│ ⏎ 1-9 direct        ␣ n/N   needs-you │
   ▤ 0                                 │ ✉ m   read/unread   ✉ M     read all  │
 ⣾ codex                               │ ↔ ←/→ account tabs  ⟳ r     reload    │
   task-4                              │ ✕ x   dismiss       ↕ a/d   width     │
   ▢ ──────────────────────────────────│                                       │
   ▤ 0                                 │ filter                                │
 ⣾ codex                               │ ? q   waiting       ! e     attention │
   task-5                              │ ⏸︎ p   paused        ✓ s     done      │
   ▢ ──────────────────────────────────│ ⢿ w   working       ○ o     idle      │
   ▤ 0                                 │ ☾ z   sleeping                        │
                                       │ ● u   unread        ≡ A     all       │
                                       │                                       │
                                       │ ▐ alt p sidebar                       │
                                       │   alt g zoom                          │
                                       ╰────────── any key to close ───────────╯
 ──────────────────────────────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                                                 $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                                                 $0.00

                                                                     ? for help
