crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__make_up_filter_failed.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 2                            $0.00
 ────────────────────────────────────
 ? 0   ! 1   ⏸︎ 0   ✓ 0   ⢿ 1   ☾ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌! claude                            ▐
▌  db migrate                        ▐
▌  ▢ ──────────────────────────    0%▐
▌  ▤ 0                          ◔ <t>▐



 ────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0       $0.00

                           ? for help
