crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__make_up_filter_unread.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
assertion_line: 103
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 2 (1)
 ────────────────────────────────────
 ? 0   ! 1   ⏸︎ 0   ✓ 0      ⢿ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌! claude · 200k                     ▐
▌  db migrate                        ▐
▌  ▢ ──────────────────────────    0%▐








                           ? for help
