crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__named_team_selection_expands_teammates.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 3                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 3   ☾ 0   ○ 0

▎⑂ team-expand · forge ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⢄ planner                                           ▐
▌  plan                                              ▐
▌  ▢ ──────────────────────────────────────────    0%▐
▌  ▤ 0                                               ▐
▌  ⧉ subagents (1)                                   ▐
▌    ⣾ research · map the renderer                   ▐
▌                                               ◔ <1m▐
▎⢄ coder                                             🮇
▎  implement                                         🮇
▎  ▢ ──────────────────────────────────────────    0%🮇
▎  ▤ 0                                               🮇
▎  ⧉ subagents (1)                                   🮇
▎    ⣾ tests · pin the frame                         🮇
▎                                               ◔ <1m🮇
▎⢄ stray                                             🮇
▎  observe                                           🮇
▎  ▢ ──────────────────────────────────────────    0%🮇
▎  ▤ 0                                               🮇
▎  ⧉ subagents (1)                                   🮇
 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
